--- a/app/src/main/res/layout/fragment_statistics.xml
+++ b/app/src/main/res/layout/fragment_statistics.xml
@@ -1,14 +1,69 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".statistics.StatisticsFragment">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <data>
+
+        <import type="android.view.View" />
+
+        <variable
+            name="viewmodel"
+            type="me.alberto.notethat.statistics.StatisticsViewModel" />
+    </data>
+
+
+    <me.alberto.notethat.ScrollChildSwipeRefreshLayout
+        android:id="@+id/refresh_layout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        app:onRefreshListener="@{viewmodel::refresh}"
+        app:refreshing="@{viewmodel.dataLoading}">
 
-</FrameLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            android:paddingLeft="@dimen/activity_horizontal_margin"
+            android:paddingTop="@dimen/activity_vertical_margin"
+            android:paddingRight="@dimen/activity_horizontal_margin"
+            android:paddingBottom="@dimen/activity_vertical_margin">
+
+            <LinearLayout
+                android:id="@+id/statistics_layout"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="vertical"
+                android:visibility="@{viewmodel.dataLoading ? View.GONE : View.VISIBLE}">
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="@string/statistics_no_tasks"
+                    android:textAppearance="?android:attr/textAppearanceMedium"
+                    android:visibility="@{viewmodel.empty ? View.VISIBLE : View.GONE}" />
+
+                <TextView
+                    android:id="@+id/stats_active_text"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:paddingTop="1dp"
+                    android:text="@{@string/statistics_active_tasks(viewmodel.activeTasksPercent)}"
+                    android:textAppearance="?android:attr/textAppearanceMedium"
+                    android:visibility="@{viewmodel.empty ? View.GONE : View.VISIBLE}" />
+
+                <!-- android:paddingTop specified to temporarily work around -->
+                <!-- https://github.com/robolectric/robolectric/issues/4588 -->
+                <TextView
+                    android:id="@+id/stats_completed_text"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:paddingTop="1dp"
+                    android:text="@{@string/statistics_completed_tasks(viewmodel.completedTasksPercent)}"
+                    android:textAppearance="?android:attr/textAppearanceMedium"
+                    android:visibility="@{viewmodel.empty ? View.GONE : View.VISIBLE}" />
+
+            </LinearLayout>
+        </LinearLayout>
+
+    </me.alberto.notethat.ScrollChildSwipeRefreshLayout>
+</layout>
