--- a/app/src/main/res/layout/fragment_task_detail.xml
+++ b/app/src/main/res/layout/fragment_task_detail.xml
@@ -19,7 +19,7 @@
         android:layout_height="match_parent"
         tools:context=".taskdetails.TaskDetailFragment">
 
-        <com.example.android.architecture.blueprints.todoapp.ScrollChildSwipeRefreshLayout
+        <me.alberto.notethat.ScrollChildSwipeRefreshLayout
             android:id="@+id/refresh_layout"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -96,7 +96,7 @@
 
                 </RelativeLayout>
             </LinearLayout>
-        </com.example.android.architecture.blueprints.todoapp.ScrollChildSwipeRefreshLayout>
+        </me.alberto.notethat.ScrollChildSwipeRefreshLayout>
 
         <com.google.android.material.floatingactionbutton.FloatingActionButton
             android:id="@+id/edit_task_fab"
